[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced ={ version = "0.6.0", features = ["glow", "tokio"]}
tokio = { version = "1.21.2", features = ["sync", "fs"] }
rodio = { version="0.16.0", default-features = false, features = ["symphonia-wav"]}